# ebnerd-benchmark

./: .gitignore  AUTHORS.md  LICENSE  README.md  nrms_ebnerd_doc.py  nrms_ebnerd_doc_hist.py  nrms_ebnerd_doc_large.py  nrms_ebnerd_doc_small.py  nrms_ebnerd_small.py  pyproject.toml  run_docvec_ba.sh  run_docvec_ebnerd.sh  run_docvec_ebnerd_triplet.sh  run_docvec_emb.sh  run_docvec_hist.sh  utils.py
codabench/: .env  README.md  codabench_docker.sh
competition/: README.md
competition/doc/: introduction.md
ebrec/utils/: constants.py
examples/00_quick_start/: dataset_ebnerd.ipynb  lstur_dummy.py  naml_dummy.py  npa_dummy.py  nrms_docvec_dummy.py  nrms_dummy.py  nrms_ebnerd.ipynb  nrms_ebnerd.py  nrms_ebnerd_small.py
examples/01_datasets/: dataset_analysis.ipynb  dataset_ebnerd.ipynb  descriptive_analysis.py  ebnerd_descriptive_analysis.ipynb
examples/02_baseline/: ebnerd_feat_baselines.py
examples/02_evaluation/: evaluate_predictions.py  make_baselines.py
examples/03_beyond_accuracy/: make_beyond_accuarcy.py  make_beyond_accuracy.ipynb
examples/04_reproducibility_scripts/: ebnerd_nrms_docvec.py
examples/beyond_accuracy/: make_beyond_accuracy.ipynb
examples/datasets/: ebnerd_descriptive_analysis.ipynb
examples/quick_start/: lstur_docvec_dummy.py  lstur_ebnerd.py  make_embedding_artifacts.ipynb  npa_docvec_dummy.py  npa_dummy.py  nrms_docvec_dummy.py  nrms_ebnerd.ipynb
examples/reproducibility_scripts/: args.py  args_lstur.py  args_lstur_docvec.py  args_npa.py  args_nrms.py  args_nrms_docvec.py  args_shared.py  ebnerd_lstur.py  ebnerd_lstur_npa.py  ebnerd_lstur_npa_ba.py  ebnerd_lstur_npa_docvec.py  ebnerd_lstur_npa_docvec_emb.py  ebnerd_lstur_npa_docvec_hist.py  ebnerd_nrms.py  ebnerd_nrms_ba.py  ebnerd_nrms_doc_hist.py  ebnerd_nrms_docvec.py  (+4 more)
test/: __init__.py
(+64 files in other folders)
