[project]
name = "ebrec"
description = "Ekstra Bladet Benchmark"
version = "0.0.1"
authors = [
    { name = "Johannes Kruse", email = "johannes.kruse@eb.dk" }
]
requires-python = ">=3.10, <4"
dependencies = [
    "polars==0.20.7",
    "numpy==1.26.0"
]

[project.optional-dependencies]
# pip install "my_project[extras]"
extras = ["transformers"]

