[project]
name = "ebrec"
description = "Ekstra Bladet Benchmark"
version = "0.0.1"
authors = [{ name = "Johannes Kruse", email = "johannes.kruse@eb.dk" }]
requires-python = ">=3.10, <3.12"
dependencies = [
    # fastformer:
    "transformers>=4.30.0, <4.37.3",
    # newsrec:
    "tensorflow>=2.12.0, <2.16.0",
    # Fastformer; DeepCTR
    "torch>=2.0.0, <2.3.0",
    # Evaluation:
    "scikit-learn==1.4.0",
    # GENERAL:
    "numpy>=1.24.0, <1.26.1",
    "polars==0.20.8",
    "pyyaml==6.0.1",
    "tqdm",
]

[project.optional-dependencies]
# pip install "my_project[extras]"
# pip install -e .'[notebooks]'
notebooks = ["transformers", "jupyter"]
tests = [
    "pytest",
    "transformers>=4.30.0, <4.37.3",
    "tensorflow>=2.12.0, <2.16.0",
    "torch>=2.0.0, <2.3.0",
]
